--- a/src/assets/css/partials.css
+++ b/src/assets/css/partials.css
@@ -1,5 +1,6 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css");
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap');
 *,
 html {
     padding: 0;
@@ -30,57 +31,94 @@ html {
 }
 
 :root {
-    --primary-font-family: 'Montserrat', sans-serif;
-    /* Main Colors  */
-    --primary-color: #0040a1;
-    --secondary-color: #00EC83;
-    --dark-color: #282929;
-    --light-accent: #E6F2FF;
-    --muted-color: #7E7E7E;
-    --dark-primary-color: #002C6D;
+    /* Primary Font Type */
+    --primary-font-family: 'Rubik', sans-serif;
+
+    /* Primary Theme  */
+    --primary-50: #E6EFEF;
+    --primary-100: #CCDDDD;
+    --primary-200: #99BBBB;
+    --primary-300: #669999;
+    --primary-400: #337777;
+    --primary-500: #005555;
+    --primary-600: #004040;
+    --primary-700: #002B2B;
+    --primary-800: #001515;
+    --primary-900: #000909;
+
+     /* Gray Theme  */
+     --gray-50: #F9FAFB;
+     --gray-100: #F3F4F6;
+     --gray-200: #E5E7EB;
+     --gray-300: #D1D5DB;
+     --gray-400: #9CA3AF;
+     --gray-500: #6B7280;
+     --gray-600: #4B5563;
+     --gray-700: #374151;
+     --gray-800: #1F2937;
+     --gray-900: #111827;
+
+    /* Tertiary Theme  */
+    --tertiary-50: #FFFFF5;
+    --tertiary-100: #FDFFE9;
+    --tertiary-200: #FCFFD4;
+    --tertiary-300: #FAFFBE;
+    --tertiary-400: #F9FFA9;
+    --tertiary-500: #F7FF93;
+    --tertiary-600: #B9BF6E;
+    --tertiary-700: #7C804A;
+    --tertiary-800: #3E4025;
+    --tertiary-900: #191A0F;
+
+     /* Yellow Scheme  */
+     --yellow-50: #FFFCE6;
+     --yellow-100: #FFF7CC;
+     --yellow-200: #FFF099;
+     --yellow-300: #FFE866;
+     --yellow-400: #FFE133;
+     --yellow-500: #FFD900;
+     --yellow-600: #BFA300;
+     --yellow-700: #806D00;
+     --yellow-800: #403600;
+     --yellow-900: #1A1600;
+
+    /* Error/Danger Theme  */
+    --error-50: #FCE7E8;
+    --error-100: #F7CED0;
+    --error-200: #EF9CA1;
+    --error-300: #E86B71;
+    --error-400: #E03942;
+    --error-500: #D80813;
+    --error-600: #A2060E;
+    --error-700: #6C040A;
+    --error-800: #360205;
+    --error-900: #160102;
+
+     /* Black Theme  */
+     --black-50: #E6E6E6;
+     --black-100: #CCCCCC;
+     --black-200: #999999;
+     --black-300: #666666;
+     --black-400: #333333;
+     --black-500: #000000;
+     --black-600: #000000;
+     --black-700: #000000;
+     --black-800: #000000;
+     --black-900: #000000;
+
+      /* White Theme  */
+    --white-50: #FFFFFF;
+    --white-100: #FFFFFF;
+    --white-200: #FFFFFF;
+    --white-300: #FFFFFF;
+    --white-400: #FFFFFF;
+    --white-500: #FFFFFF;
+    --white-600: #BFBFBF;
+    --white-700: #808080;
+    --white-800: #404040;
+    --white-900: #1A1A1A;
 
 
-    /* Cobalt Blue  */
-    --blue-100: #ebf3ff;
-    --blue-200: #d6e7ff;
-    --blue-300: #c2dbff;
-    --blue-400: #99c3ff;
-    --blue-500: #85bbff;
-
-     /* Green Shades  */
-     --green-100: #ebfff6;
-     --green-200: #d6ffed;
-     --green-300: #c2ffe4;
-     --green-400: #99ffd1;
-     --green-500: #70ffbf;
-     --green-600: #06E594;
-   
-
-    /* Gray Shades  */
-    --gray-50: #f5f5f5;
-    --gray-100: #ebebeb;
-    --gray-150: #d9d9d9;
-    --gray-200: #e0e0e0;
-    --gray-250: #A9A9A9;
-    --gray-300: #c2c2c2;
-    --gray-350: #E5E7E8;
-    --gray-400: #979b9b;
-    --gray-450: #c4c4c4;
-    --gray-500: #646b6b;
-    --gray-600: #464949;
-    --gray-700: #3c3e3e;
-    --gray-800: #323434;
-    --gray-900: #282929;
-
-    /* Alerts/Extras/Accents  */
-    --inactive-color: #C2DBFF;
-    --error-color: #Ff6550;
-    --error: #FC3030;
-    --info-color: #Ffb836;
-    --success-color: #56cdad;
-    --success: #50B748;
-     --blue-accent: #26a4ff;
-     --purple-accent: #7b61ff;
     --spacer: 20px;
     --curve: 10;
 }
