--- a/src/assets/css/nav.css
+++ b/src/assets/css/nav.css
@@ -5,9 +5,10 @@
     position: fixed;
     top: 0;
     left: 0;
+    overflow-y: auto;
 }
 
-#app-drawer ul li .menu-item-link {
+#app-drawer ul li .menu-item-link, #app-drawer ul li .menu-icon {
     color: var(--white-50);
     font-weight: 500;
     display: flex;
@@ -15,18 +16,33 @@
     display: -webkit-flex;
     gap: 10px;
     font-size: 14px;
-    /* padding: 3rem; */
-    /* background-color: red; */
+    padding: 1.5em 3rem;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#app-drawer ul li .menu-item-link.active-link {
+    background-color: var(--white-50);
+    color: var(--gray-800);
+}
+
+#app-drawer ul li .menu-item-link .menu-item-icon, #app-drawer ul li .sub-menu .sub-menu-items .menu-item-icon {
+    font-size: 20px;
 }
 
 
 #app-drawer ul li .sub-menu .sub-menu-items {
-    color: var(--gray-800);
+    color: var(--white-50);
     display: block;
     font-weight: 500;
     font-size: 14px;
+    padding: 1.5em 5rem;
 }
 
 #app-drawer ul li .sub-menu  {
-    background-color: var(--primary-200);
+    /* background-color: var(--primary-200); */
 }
+
+/* #app-drawer ul li .sub-menu .sub-menu-items {
+
+} */
