--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -1,6 +1,6 @@
 /* CONTAINERS  */
 .spacer {
-    padding: 1rem 3rem;
+    padding: 1.4rem 1.4rem;
 }
 
 /* BUTTONS  */
@@ -28,8 +28,13 @@ h1, h2, h3, h4, h5, h6, ul {
     font-size: 15px;
 }
 
+.data-number {
+    font-weight: 500;
+    color: var(--gray-500);
+}
+
 .desc-text {
     color: var(--gray-500);
     font-weight: 300;
-    font-size: 14px;
+    font-size: 12px;
 }
