--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -38,3 +38,8 @@ h1, h2, h3, h4, h5, h6, ul {
     font-weight: 300;
     font-size: 12px;
 }
+
+.header-text {
+    color: var(--gray-800);
+    font-weight: 400;
+}
