--- a/src/assets/css/nav.css
+++ b/src/assets/css/nav.css
@@ -17,7 +17,7 @@
     display: -webkit-flex;
     gap: 10px;
     font-size: 14px;
-    padding: 1.5em 3rem;
+    padding: 1.5em 1.8rem;
     justify-content: space-between;
     align-items: center;
 }
@@ -37,7 +37,7 @@
     display: block;
     font-weight: 500;
     font-size: 14px;
-    padding: 1.5em 5rem;
+    padding: 1.5em 0 1.5em 4rem;
 }
 
 #app-drawer ul li .sub-menu  {
