--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -4,7 +4,27 @@
 }
 
 /* BUTTONS  */
+.primary-btn {
+    background-color: var(--primary-500);
+    border-radius: 8px;
+    text-transform: uppercase;
+    padding: 12px 25px;
+    font-weight: 500;
+    color: var(--white-50);
+    font-size: 14px;
+    border: none;
+}
 
+.outline-btn {
+    border: 1px solid var(--primary-500);
+    background-color: var(--white-50);
+    padding: 12px 25px;
+    font-weight: 500;
+    font-size: 14px;
+    border-radius: 8px;
+    text-transform: uppercase;
+    color: var(--primary-500);
+}
 
 
 
@@ -14,6 +34,79 @@
 
 
 /* TAGS  */
+
+
+
+/* FORMS  */
+/* Search Field  */
+.search-area {
+    border: 1px solid var(--gray-500);
+    border-radius: 4px;
+    display: flex;
+    display: inline-flex;
+    display: -webkit-flex;
+    gap: 5px;
+    align-items: center;
+    padding-left: 10px;
+    width: 100%;
+}
+
+.search-area input {
+    border: none;
+    background-color: transparent;
+    width: 100%;
+    padding: 10px;
+    outline: none;
+    font-size: 16px;
+    color: var(--gray-800);
+    font-weight: 400;
+}
+
+.search-field label {
+    font-size: 14.5px;
+}
+
+
+.search-area input::placeholder {
+    color: var(--gray-500);
+    font-weight: 300;
+    font-size: 14.5px;
+}
+
+.search-icon {
+    font-size: 20px;
+    font-weight: 300;
+    color: var(--gray-500);
+}
+
+/* TABLE  */
+.table td,
+.table th {
+    /* border-top: none; */
+    /* border-bottom: none; */
+    font-size: 15px;
+    vertical-align: middle;
+    font-weight: 500;
+}
+
+.table td {
+    color: var(--gray-800);
+    font-weight: 300;
+    border-bottom: 0.5px solid var(--gray-300);
+}
+
+
+.table tbody tr:hover {
+    background-color: rgba(0, 0, 0, 0.06);
+}
+
+.table thead th {
+    border-bottom: none;
+    color: var(--white-50) !important;
+    background-color: var(--primary-500);
+}
+
+
 
 
 /* GENERALS  */
@@ -42,4 +135,40 @@ h1, h2, h3, h4, h5, h6, ul {
 .header-text {
     color: var(--gray-800);
     font-weight: 400;
+}
+
+.header-area {
+    display: flex;
+    display: inline-flex;
+    display: -webkit-flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.edit {
+    width: 30px;
+    height: 30px;
+    display: block;
+    background-color: var(--primary-100);
+    color: var(--primary-500);
+    font-size: 20px;
+    display: grid;
+    display: -ms-grid;
+    display: -moz-grid;
+    place-items: center;
+    border-radius: 4px;
+}
+
+.delete {
+    width: 30px;
+    height: 30px;
+    display: block;
+    background-color: var(--error-100);
+    color: var(--error-500);
+    font-size: 20px;
+    display: grid;
+    display: -ms-grid;
+    display: -moz-grid;
+    place-items: center;
+    border-radius: 4px;
 }
